--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,14 @@
   width: 100%;
   height: 100vh;
   background-color: #6b89dd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .weather{
   width: 380px;
   padding: 30px;
   border-radius: 10px;
-  margin: 50px auto;
   text-align: center;
   color: white;
   background: linear-gradient(130deg, rgb(86, 86, 235), rgb(5, 5, 199));
@@ -84,6 +86,11 @@
 
 .humidity p, .wind p{
   margin: 0px;
+}
+.error{
+  color: rgb(255, 255, 255);
+  text-align: left;
+  margin-left: 10px;
 }
 
 
